# codex-app-proxy

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  build.ps1
.github/: release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/releases/: v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md
.github/workflows/: windows-build.yml
resources/: START-HERE.html  config-web.html  default_config.json
resources/windows/: launcher.rc
src/common/: config.cpp  config.h  launch_args.cpp  launch_args.h  logging.cpp  logging.h  network_utils.cpp  network_utils.h  process_utils.cpp  process_utils.h  string_utils.cpp  string_utils.h
src/hook/: dllmain.cpp  hooks.cpp  hooks.h  proxy_tunnel.cpp  proxy_tunnel.h
src/launcher/: main.cpp
tests/: config_tests.cpp  verify-icon.ps1  verify-package.ps1  verify-start-here.mjs
